feat(mockexam): 정처기 모의고사 다양성 대폭 개선
[Phase 1] 시드 풀 다중화
- EngineerTopicExamples: 카테고리당 1개 → 5개 (총 45개 시드)
- 각 시드에 difficulty(1/3/5) 메타 추가 → 자연스러운 난이도 분산
- 패턴 다양화: C는 재귀/포인터/비트/구조체, Java는 추상클래스/문자열/예외/Comparator/Stream 등
- 새 헬퍼: randomFor(category, needed, random), identifiersOf(), identifiersOfAll()

[Phase 2] 프롬프트 톤 전환 + anti-example
- buildEngineerPrompt: 단일 시드 → N개 시드 동시 주입 (시드당 변형 1개씩)
- 시스템 프롬프트: '그대로 따르세요' → '시드는 퀄리티 기준일 뿐, 절대 복제 금지'
- forbidden identifiers (시드 식별자 + 최근 출제 식별자) 명시
- recent answers 회피 패턴 명시
- 시드의 난이도/형식과 다른 출제 의도(실행결과/빈칸/약술/잘못짚기) 강제

[Phase 3] 난이도 분포 강제
- 시드의 difficulty가 자연스럽게 계승 (시드 풀이 1/3/5 혼합되어 있어서)
- toEngineerEntity가 AI 응답 difficulty 우선, 시드 difficulty 폴백

[Phase 4] 구조적 중복 차단
- QuestionRepository: findRecentAnswersBySubjectId, findRecentContentsBySubjectId 추가
- EngineerMockExamCreator: 정답 8자+ 일치 검증 + 회차 내 중복 차단
- 충돌 감지 시 강화된 forbidden 신호로 1회 재시도 (무한루프 방지)
- application.yaml: anthropic temperature=0.9, top-p=0.95 명시

해결: 같은 카테고리에서 변수명만 바뀐 복제 문제 양산 + 난이도 5 편중 80%+ 현상